validation does not produce complete results when it should

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0, v6.0, v5.0
    • Execution Team 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A recent validation result noted the following:

      "Not all index entry inconsistencies are reported due to memory limitations. Memory limit for validation is currently set to 8192MB and can be configured via the maxValidateMemoryUsageMB parameter."

      However, there are only 1085 docs and one index on email with 228 keys that has missing entries. Given 8 GB of memory, we should be able to get complete results, even if every email address were 16 MB.

            Assignee:
            Gregory Noma
            Reporter:
            Geert Bosch
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: