SERVER-86407 Ensure validation memory usage integer doesn't overflow (#20743)

(cherry picked from commit ef641d3ae5655dd9cd3372c560a2ebb95464cf27)

GitOrigin-RevId: 67426ce95ea00d362292df6046b45513f68cf1ee